--- a/water/CSS/style.css
+++ b/water/CSS/style.css
@@ -1,3 +1,4 @@
+/* wordpress */
 .image1{
 
     background-image: url(../IMAGES/bg.jpg);
@@ -5,8 +6,6 @@
     background-attachment: fixed;
     height:600px;
 }
-
-
 
 .h4{
     font-family: 'Raleway', sans-serif;
@@ -16,8 +15,13 @@
     background-attachment: fixed;
 }
 
+.a{
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
 .a1{
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     padding-right: 50px;
     display: flex;
     justify-content: flex-end;
@@ -27,9 +31,9 @@
     font-size: 13px;
 }
 
-.para .b1{
+.b1{
     font-family: 'Raleway', sans-serif;
-    width: 200px ;
+    width: 200px;
     padding: 15px;
     text-align: center;
     font-weight: bold;
@@ -62,45 +66,45 @@
 .para .b2:hover{
     background-color: black;
 }
+/* SEO and portfolio */
 
-.img1{
+.seo{
+    display: flex;
+}
+
+.img1 img{
+    width: 500px; 
+    height: 400px;
     padding: 60px;
     margin-left:100px ;
 }
 
-.img2{
-    padding: 60px;
-    margin-right: 80px;
+.p2{
+    padding: 40px;
 }
 
-
 .p2 h1{
+    margin-top: 100px;
     font-family: 'Raleway', sans-serif;
     color: black;
     margin-right: 100px;
     
 }
 
-.p2{
+.p2 p{
+    text-align: justify;
     font-family: 'Raleway', sans-serif;
-    padding: 100px;
+    padding-bottom: 10px;
     font-size: 15px;
     color: gray;
-    
-
 }
- .p2 button{
-    font-family: 'Raleway', sans-serif;
-    letter-spacing: 2px;
-    width: 200px;
-    padding: 15px;
-    text-align: center;
-    font-weight: bold;
-    border: 2px solid white;
-    background-color: darkslateblue;
-    color: white;
 
- }
+.portfolio{
+    display: flex;
+    background-color: whitesmoke;
+}
+
+/* small parallex */
 
 .img3{
     background-image: url(../IMAGES/4.png);
@@ -115,13 +119,9 @@
     text-align: center;
     position: absolute;
     transform: translateY(50%);
-
-}
-
-.p3{
-    font-family: 'Raleway', sans-serif;
     font-size: smaller;
     margin-left: 210px;
+
 }
 
 .p3 h1{ 
@@ -131,19 +131,10 @@
     font-size: 50px;
 }
 
-.p3 button{
-    font-family: 'Raleway', sans-serif;
-    width: 200px ;
-    padding: 15px;
-    text-align: center;
-    font-weight: bold;
-    border: 2px ;
-    background-color: darkslateblue;
-    color: white;
-    letter-spacing: 2px;
-}
+/* limitless */
 
 .p4 h1{
+    color: black;
     font-family: 'Raleway', sans-serif;
     text-align: center;
     padding-top: 50px;
@@ -158,32 +149,35 @@
     padding-bottom: 10px;
 }
 
-.p4 button{
-    font-family: 'Raleway', sans-serif;
-    width: 180px ;
-    padding: 15px;
-    background-color: darkslateblue;
-    color: white;
-    border: 2px white solid;
-    margin-left:500px;
-    letter-spacing: 2px;
+.btn .b1{
+    margin-left: 500px;
 }
 
-.div1 .img4{
-   padding-right: 100px;
-    margin-top: 50px;
-    margin-bottom: 0%;
+/* image */
+
+.div1 img{
+    padding-top: 10px;
+    width: 100%;
+    height: auto;
 }
 
+/* latest projects */
 
-.div2 .p5{
+.div2{
+    background-color: black;
+}
+
+.p5{
     font-family: 'Raleway', sans-serif;
     padding: 40px;
     color: white;
     text-align: center;
 }
 
+/* gallery */
+
 .gallery{
+    background-color: black;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: repeat(4,1fr);
@@ -192,12 +186,36 @@
 
 }
 
+/* customers */
+
 .img5{
     margin-bottom: 20px;
     background-image: url(../IMAGES/customer.png);
     background-size: cover;
     background-attachment: fixed;
     margin-bottom: 10px;
+}
+
+.rimg{
+    border-image: round; 
+    border-radius: 900px;
+}
+
+/* theme */
+
+.div3{
+    background-color: whitesmoke;
+    
+}
+.q1{
+    display: flex;
+    padding: 10px;
+}
+
+.button{
+    margin-left: 250px;
+    
+
 }
 .p6{
     font-family: 'Raleway', sans-serif;
@@ -217,17 +235,6 @@
     margin-left: 200px;
     font-size: large;
 }
-.q1 button{
-    font-family: 'Raleway', sans-serif;
-    margin-left: 300px;
-    padding: 20px;
-    background-color:darkslateblue;
-    color: white;
-    width: 300px;
-    border: 2px white solid;
-    letter-spacing: 2px;
-    
-}
 
 .copyright{
     font-family: 'Raleway', sans-serif;
@@ -237,3 +244,21 @@
     color: white;
     padding: 100px;
 }
+
+
+/* @media(min-width:300px) and (max-width:767.98px){
+    .image1{
+    background-image: url(../IMAGES/bg.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    height:600px;
+    }
+
+    .h4{
+    font-family: 'Raleway', sans-serif;
+    text-align: start;
+    margin-left: 50px;
+    height: 10px;
+    background-attachment: fixed;
+    }
+} */
