--- a/water/CSS/style.css
+++ b/water/CSS/style.css
@@ -154,9 +154,13 @@
 }
 
 /* image */
-
+.div1{
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 30px;
+}
 .div1 img{
-    padding-top: 10px;
+    /* padding-top: 10px; */
     width: 100%;
     height: auto;
 }
